--- a/DatingApp/DatingApp.API/wwwroot/index.html
+++ b/DatingApp/DatingApp.API/wwwroot/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.d1aaa83538926d6bf069.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.53c552ef6deddc501494.js"></script><script type="text/javascript" src="polyfills.7b910762b02e296dc069.js"></script><script type="text/javascript" src="scripts.11ea4138a8dec3b651be.js"></script><script type="text/javascript" src="main.e1a43f7425871febe634.js"></script></body>
 </html>
